tests/pure/access_global_mut.sy
a := 1

start :: pu do
    b :: a
end

// error: Cannot access mutable variables from pure functions
